# File-Data-Transfer-API

./: README.md  image_database.json  pyproject.toml
client/: client.py
database_client/: database_manager.py  env_variables.py
database_client/database_connection/: abstract_databse_connection.py  local_database_connection.py
database_client/datamodel/: database_entry.py
file_client/: __init__.py  env_variables.py  file_manager.py
file_client/file_system/: abstract_file_system.py  local_file_system.py
file_data_transfer_api/: api_datamodel.py  cli.py  env_variables.py  example_get_image.py  file_saving_utils.py  main.py
file_data_transfer_api/api/: api.py  api_datamodel.py
file_data_transfer_api/cli/: cli.py
file_data_transfer_api/utils/: env_variables.py  file_saving_utils.py
